Updates to multiplication service for events
- reformats using google style guide